eks_elk/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "kibana-ingress"
  annotations:    
    cert-manager.io/cluster-issuer: "letsencrypt-production"    
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dongdorrong-kibana.crscube.io
      secretName: kibana-tls
  rules:
    - host: dongdorrong-kibana.crscube.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
